curatescape/css/screen.css
/* ... */
@media only screen and (min-width:50em) {
	header.main {
		padding-top: 1em;
		padding-bottom: 1em
	}
	header.main #logo-img {
		padding-top: 0;
		z-index: 0
	}
}

/*! HERO */
#tours.browse #hero,.page #hero{display: none;}
/* 9/27/16 reduced (20em->15em) to get more quickly to conten below
  #hero,#map_canvas{height:20em;}*/
#hero,#map_canvas{height:15em;}
#hero{background:none center top no-repeat #ccc;clear:both;background-size:cover;box-shadow:0 0 1em #942828 inset}
@media only screen and (max-width: 25em){
	#hero,#map_canvas{height:12em}
}
@media only screen and (max-width: 45em){
	#tours.show #hero,#tours.browse #hero,.page #hero{background-size:contain;background-attachment:scroll !important}
	.no-image-for-hero #hero{display:none}
}
@media only screen and (min-width: 45em){
	#hero{width:100%;clear:right;margin-bottom:0;margin-right:0;box-shadow:none}
	.no-location #hero{display: none;}
}

/*! MAP in HERO container*/
#hero .leaflet-container{font:inherit !important;}
.leaflet-control-layers-list{font-size:.8em;line-height: 2em;}

/* Hide base layers since we've only got one
.leaflet-control-layers-base label span{padding-left: 3px;}
*/
div.leaflet-control-layers-base, div.leaflet-control-layers-separator {
	display: none;
}
.leaflet-popup-content-wrapper{border-radius:0 !important;}
.leaflet-popup a{border:none;}
.home .leaflet-control-attribution{display:none}.home.expand-map .leaflet-control-attribution{display: block;}

.leaflet-control-layers-toggle:before {
	content: "Map Layers";
	line-height: normal;
	position: absolute;
	text-align: center;
	font-size: small;
	/*color: #942828;*/
	color: black;
	background: white;
	opacity: 0.7;
	/*text-shadow: 1px 1px white;*/
	top: 100%;
	/*font-variant: normal;*/
	font-family: Tahoma, Geneva, sans-serif;
}
.leaflet-control-layers {
	font-variant: small-caps;
}

/*! MAP actions */
.no-location .map-actions{display: none;}
.map-actions{display:block;width:100%;text-align:center;background:#942828;padding:.25em 0}
.map-actions a{color:#fff;border:none;cursor:pointer;display:inline-block;margin:0 1em;padding:.5em}
.map-actions a:hover{background:#fafafa;color:#942828}
.map-actions a span.label{display:inline}
.map-actions a span.alt{display:none}
body#home .map-actions{display:none}
body#home.fullscreen-map .map-actions{display:block}
body.fullscreen-map #map_canvas{display:block !important}
i.working{display:inline-block;-moz-animation:spin 2s infinite linear;-o-animation:spin 2s infinite linear;-webkit-animation:spin 2s infinite linear;animation:spin 2s infinite linear}
@media only screen and (max-width:50em){
	body#home .map-actions{display:block}
	.map-actions a{margin:0;padding:.5em}
	.fullscreen-map .map-actions a{font-size:.9em; margin:1.25em 0 !important;}
	.map-actions a span.alt{display:inline}
	#items.show .map-actions a.fullscreen span.alt:before{content:'Show Location on '}
	#tours.show .map-actions a.fullscreen span.alt:before{content:'Show Locations on '}
	#items.show.fullscreen-map .map-actions a.fullscreen span.alt:before{content:'Close '}
	#tours.show.fullscreen-map .map-actions a.fullscreen span.alt:before{content:'Close '}
	.map-actions a span.label{display:none}
	.map-actions a.location,.map-actions a.directions{display:none}
	.fullscreen-map .map-actions a.location,.fullscreen-map .map-actions a.directions{display:inline-block}
}

/*! Fullscreen MAP */
.fullscreen-map #hm-map{width:100%;height:100%;position:fixed;top:0;left:0}.fullscreen-map .map-actions{width:100%;height:auto;position:fixed;bottom:0;left:0;z-index:2}
@media only screen and (max-width:30em){
	.fullscreen-map .map-actions{top:0;height:2.75em;z-index: 2}
	.fullscreen-map #hm-map{top:3em;height:100%;z-index: 1}
	.fullscreen-map .map-actions a{margin:0 0 !important;}
}
.fullscreen-map #hm-map #map_canvas{height:100% !important;width:100% !important}#home.fullscreen-map #about article,#home.fullscreen-map #about .home-about-links,#home.fullscreen-map #featured-story,#home.fullscreen-map #home-tours,#home.fullscreen-map #home-item-list,#home.fullscreen-map #home-popular-tags{display:none}@media only screen and (max-width:50em){.fullscreen-map header.main,.fullscreen-map #showmap{display:none}.fullscreen-map #map_canvas{max-height:none}}

/*! MAP MARKERS */
/*.leaflet-container a{color:inherit !important;}*/
.leaflet-popup-content{margin: 0 !important;min-width:12em;max-width:15em;}
#tours.show .leaflet-popup-content{min-width: 10em;max-width:26em;padding:8px 8px 8px;}
.curatescape-infowindow-title{padding:8px 8px 0;display: inline-block;font-variant: small-caps;line-height: 1.2em;}
.curatescape-infowindow-address{padding:4px 8px 8px;font-size:.65em;text-transform: uppercase;color:#bababa; white-space:nowrap;overflow: hidden;text-overflow: ellipsis;width: 90%;}
.curatescape-infowindow-address.single-item{padding-top:8px;min-width:14em;}
#tours.show .curatescape-infowindow-address{padding:0 4px 4px 32px;}
#tours.show .leaflet-popup-content .number{margin-right:0;}
.curatescape-infowindow-image{background-color:#eaeaea;background-size:cover;width:100%;height:7.5em;display: block;background-position: center}
#map_canvas .access-anchor {
    background: #efefef;
    color: #777;
    border-bottom: none;
    padding: 3px 5px 3px;
    border-radius: 2px;
	font-size: .7em;
    text-align: center;
    display: block;
    margin: 4px 0 0;
    color: #999 !important;    
}#map_canvas .access-anchor:hover{color:#fff !important;}
a.leaflet-control-layers-toggle,.leaflet-control-attribution a{border-bottom: none;}

/*! SLIDER in HERO container */
#slider{overflow:hidden}
#slider li div{margin:0;
	/*height:20em; - need to reduce to 15em since map size is reduced*/
	height:15em;
	box-shadow:0 0 1em #942828 inset;
	overflow:hidden;
	opacity:.9
}
@media only screen and (max-width: 25em){
	#slider li div{height:12em}
}
/* ... */

